Code improvements (#29)
* added versioning of images

* specified expected inputs to getresourcemetrics.sh

* added getuser API
